Fix: Forms not centered and extreme input length

--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block meta %}
- <meta name="description" content="Displays details of the exercise {{exercise.exercise_title}}" />
+  <meta name="description" content="Displays details of the exercise {{ exercise.exercise_title }}" />
 {% endblock %}
 
-
 {% block extra_title %}
-{{exercise.exercise_title}}
+  {{ exercise.exercise_title }}
 {% endblock %}
 {% block content %}
   {% comment %}Admin section{% endcomment %}
@@ -27,31 +26,34 @@
   <section class="container p-4">
     <div class="row">
       {% comment %}If users are paying members gain access to this section{% endcomment %}
-          {% if user.is_authenticated %}
-            {% comment %}Add a favourite exercise button section{% endcomment %}
-            <section id="fav-icon-container">
+      {% if user.is_authenticated %}
+        {% comment %}Add a favourite exercise button section{% endcomment %}
+        <section id="fav-icon-container">
+          <div class="row">
+            <div class="col-12 d-flex">
               <form method="POST" action="{% url 'toggle_is_favourite_exercise' exercise.id %}">
                 {% csrf_token %}
                 {{ toggle_exercise_form }}
-                {% comment %} Only displaying this to active members {% endcomment %}
+                {% comment %}Only displaying this to active members{% endcomment %}
                 <div class="d-flex justify-content-center">
-                {% if is_member_active %}
-                  {% if is_exercise_favourite %}
-                  <button type="submit" class="bg-white inline-block favourite-btn black-text"><i class="fa-solid fa-heart secondary-clr-text large-icon"></i> Click me! </button>
-                  {% else %}
-                  <button type="submit" class="bg-white inline-block favourite-btn black-text"><i class="fa-solid fa-heart large-icon black-text"></i> Click me! </button>
+                  {% if is_member_active %}
+                    {% if is_exercise_favourite %}
+                      <button type="submit" class="bg-white inline-block favourite-btn black-text"><i class="fa-solid fa-heart secondary-clr-text large-icon"></i> Click me!</button>
+                    {% else %}
+                      <button type="submit" class="bg-white inline-block favourite-btn black-text"><i class="fa-solid fa-heart large-icon black-text"></i> Click me!</button>
+                    {% endif %}
                   {% endif %}
-                {% endif %}
                 </div>
                 {% comment %}Conditionally setting styles depending on if the item is already a favourite of the user{% endcomment %}
               </form>
               <a href="{% url 'toggle_is_favourite_exercise' exercise.id %}"></a>
-            </section>
-          {% endif %}
+            </div>
+          </div>
+        </section>
+      {% endif %}
       <div class="col-12">
         <div class="d-flex justify-content-center">
           <h1>{{ exercise.exercise_title }}</h1>
-          
         </div>
         {% comment %}Image and key information section{% endcomment %}
         <div>
