--- a/exercise/templates/exercise/exercise_form.html
+++ b/exercise/templates/exercise/exercise_form.html
@@ -1,24 +1,26 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block meta %}
- <meta name="description" content="Fill out the form to add or edit an exercise" />
+  <meta name="description" content="Fill out the form to add or edit an exercise" />
 {% endblock %}
 
 {% block extra_title %}
-Exercise form
+  Exercise form
 {% endblock %}
 {% block content %}
   {% if user.is_staff %}
     <section>
       <div class="container">
         <div class="row">
-          <form method="POST" action="" enctype="multipart/form-data">
-            <div class="col-12">{{ exercise_form|crispy }}</div>
-            {% csrf_token %}
-            <div class="d-flex justify-content-center">
-              <button type="submit" class="button">Submit</button>
-            </div>
-          </form>
+          <div class="col-12 d-flex">
+            <form method="POST" action="" enctype="multipart/form-data">
+                {{ exercise_form|crispy }}
+                {% csrf_token %}
+              <div class="d-flex justify-content-center">
+                <button type="submit" class="button">Submit</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </section>
