--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -46,7 +46,7 @@ Subscription form
         <div class="row">
           {% comment %}Signup form section{% endcomment %}
           <section>
-            <div class="col-12">
+            <div class="col-12 d-flex justify-content-center">
               <form method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
