--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -11,53 +11,55 @@
 {% endblock %}
 
 {% block content %}
-  {% comment %} Sign in section {% endcomment %}
+  {% comment %}Sign in section{% endcomment %}
   <section>
-    <div class="container my-5">
-      {% element h1 %}
+    <div class="container my-5 d-flex flex-column">
+      <div class="text-center">
+        {% element h1 %}
         {% trans 'Sign In' %}
-      {% endelement %}
-
+        {% endelement %}
+      </div>
       {% if not SOCIALACCOUNT_ONLY %}
         {% setvar link %}
-          <a href="{{ signup_url }}">
+        <a href="{{ signup_url }}">
+          {% endsetvar %}
+          {% setvar end_link %}
+        </a>
         {% endsetvar %}
-        {% setvar end_link %}
-          </a>
-        {% endsetvar %}
-
-        {% element p %}
+        <div class="text-center">
+          {% element p %}
           {% blocktranslate %}If you have not created an account yet, then please {{ link }}<span class="underline">sign up</span>{{ end_link }} first.{% endblocktranslate %}
-        {% endelement %}
-
+          {% endelement %}
+        </div>
         {% url 'account_login' as login_url %}
         {% element form method='post' action=login_url tags='entrance,login' %}
-          {% slot body %}
-            {% csrf_token %}
-            {{ form|crispy }}
-            {{ redirect_field }}
-          {% endslot %}
-          {% slot actions %}
-            <button type="submit" class="btn btn-primary">
-              {% trans 'Sign In' %}
-            </button>
-          {% endslot %}
+        {% slot body %}
+        {% csrf_token %}
+        {{ form|crispy }}
+        {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">{% trans 'Sign In' %}</button>
+        </div>
+        {% endslot %}
         {% endelement %}
       {% endif %}
 
       {% if LOGIN_BY_CODE_ENABLED or PASSKEY_LOGIN_ENABLED %}
-        {% element hr %}{% endelement %}
+        {% element hr %}
+        {% endelement %}
         {% element button_group vertical=True %}
-          {% if PASSKEY_LOGIN_ENABLED %}
-            {% element button type='submit' form='mfa_login' id='passkey_login' tags='prominent,login,outline,primary' %}
-              {% trans 'Sign in with a passkey' %}
-            {% endelement %}
-          {% endif %}
-          {% if LOGIN_BY_CODE_ENABLED %}
-            {% element button href=request_login_code_url tags='prominent,login,outline,primary' %}
-              {% trans 'Send me a sign-in code' %}
-            {% endelement %}
-          {% endif %}
+        {% if PASSKEY_LOGIN_ENABLED %}
+          {% element button type='submit' form='mfa_login' id='passkey_login' tags='prominent,login,outline,primary' %}
+          {% trans 'Sign in with a passkey' %}
+          {% endelement %}
+        {% endif %}
+        {% if LOGIN_BY_CODE_ENABLED %}
+          {% element button href=request_login_code_url tags='prominent,login,outline,primary' %}
+          {% trans 'Send me a sign-in code' %}
+          {% endelement %}
+        {% endif %}
         {% endelement %}
       {% endif %}
 
