--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load i18n allauth account crispy_forms_tags %}
 {% block meta %}
- <meta name="description" content="Reset your password " />
+  <meta name="description" content="Reset your password " />
 {% endblock %}
 
 {% block extra_title %}
-Password Reset
+  Password Reset
 {% endblock %}
 
 {% block head_title %}
@@ -15,37 +15,39 @@ Password Reset
 {% block content %}
   {% comment %}Password reset section{% endcomment %}
   <section>
-    <div class="container mt-5">
-      {% element h1 %}
+    <div class="container mt-5 d-flex flex-column">
+      <div class="text-center">
+        {% element h1 %}
         {% trans 'Password Reset' %}
-      {% endelement %}
-
+        {% endelement %}
+      </div>
       {% if user.is_authenticated %}
         {% include 'account/snippets/already_logged_in.html' %}
       {% endif %}
-
-      {% element p %}
+      <div class="text-center">
+        {% element p %}
         {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-      {% endelement %}
-
+        {% endelement %}
+      </div>
       {% url 'account_reset_password' as reset_url %}
 
       {% element form method='post' action=reset_url %}
-        {% slot body %}
-          {% csrf_token %}
-          {{ form|crispy }}
-          {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-          <button type="submit" class="btn btn-primary">
-            {% trans 'Reset My Password' %}
-          </button>
-        {% endslot %}
+      {% slot body %}
+      {% csrf_token %}
+      {{ form|crispy }}
+      {{ redirect_field }}
+      {% endslot %}
+      {% slot actions %}
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary m-3">{% trans 'Reset My Password' %}</button>
+      </div>
+      {% endslot %}
       {% endelement %}
-
-      {% element p %}
+      <div class="text-center">
+        {% element p %}
         {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-      {% endelement %}
+        {% endelement %}
+      </div>
     </div>
   </section>
 {% endblock %}
